--- a/visualbranding/nbproject/private/private.properties
+++ b/visualbranding/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\MiniVB1\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+deploy.ant.properties.file=C:\\Users\\Jose\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/J/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Users/MiniVB1/Documents/apache-tomcat-9.0.5
-j2ee.server.instance=tomcat90:home=C:\\Users\\MiniVB1\\Documents\\apache-tomcat-9.0.5
+j2ee.server.home=C:/Users/Jose/Downloads/apache-tomcat-9.0.6
+j2ee.server.instance=tomcat90:home=C:\\Users\\Jose\\Downloads\\apache-tomcat-9.0.6
 j2ee.server.middleware=C:/Program Files (x86)/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\MiniVB1\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Jose\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
